Use OOTB java classes available in java 11